--- a/src/Pages/CountriesStatistics.module.css
+++ b/src/Pages/CountriesStatistics.module.css
@@ -16,8 +16,7 @@
 }
 
 .countryTable {
-    margin-left: auto;
-    margin-right: auto;
+    margin: auto;
     width: 60%;
     scrollbar-width: thin;
 }
